--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "pdf-sharing-backend",
   "version": "1.0.0",
   "description": "Backend server for PDF sharing application",
-  "main": "server.js",
+  "main": "api/server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js",
+    "start": "node api/server.js",
+    "dev": "node --watch api/server.js",
         "build": "npm install"
   },
   "keywords": [
