--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "pdf-sharing-backend",
+  "name": "backend-pdf-share",
   "version": "1.0.0",
-  "description": "Backend server for PDF sharing application",
-  "main": "api/index.js",
+  "description": "File sharing backend API",
   "type": "module",
-  "scripts": {
-    "start": "node api/index.js",
-    "dev": "nodemon api/index.js",
-    "build": "echo 'Build complete'",
-    "vercel-build": "npm install"
+  "main": "index.js",
+  "engines": {
+    "node": "18.x"
   },
-  "keywords": [
-    "pdf",
-    "sharing",
-    "express",
-    "mongodb"
-  ],
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "vercel-build": "echo 'Building for Vercel...'"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1"
+    "mongoose": "^7.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "keywords": ["file-sharing", "pdf", "api"],
+  "author": "Your Name",
+  "license": "MIT"
 }
